fix(starter): close streaming responses deterministically
Signed-off-by: Zhoujie628 <zhoujie628@users.noreply.github.com>